fix margin spacing for x-repo headings

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ main section h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 0;
+    margin-top: .5em;
 }
 main section span {
     display: flex;
